Disable versionChecker for AE2

--- a/config/AppliedEnergistics2/VersionChecker.cfg
+++ b/config/AppliedEnergistics2/VersionChecker.cfg
@@ -3,7 +3,7 @@
 cache {
     # Waits as many hours, until it checks again. [range: 0 ~ 168, default: 24]
     I:interval=24
-    S:lastCheck=1522004273235
+    S:lastCheck=1522109441717
 }
 
 
@@ -18,13 +18,11 @@ client {
     B:changelog=true
 
     # If true, the player is getting a notification, that a new version is available. [default: true]
-    B:notify=true
+    B:notify=false
 }
 
 
 general {
     # If true, the version checker is enabled. Acts as a master switch. [default: true]
-    B:enabled=true
+    B:enabled=false
 }
-
-
