--- a/config/AppliedEnergistics2/CustomRecipes.cfg
+++ b/config/AppliedEnergistics2/CustomRecipes.cfg
@@ -1,10 +1,10 @@
 # Configuration file
 
 cache {
-    S:digest=1ac01698ef65ac40a06bc8bab72193ad
+    S:digest=3d46cf9a4e57c723a6211680e6a3f5b3
 
     # Caching can save processing time, if there are a lot of items. [default: true]
-    B:enableCache=true
+    B:enableCache=false
 }
 
 
@@ -16,10 +16,8 @@ general {
     B:enableForceRefresh=false
 
     # If true, the custom recipes are enabled. Acts as a master switch. [default: true]
-    B:enabled=true
+    B:enabled=false
 
     # If true, all registered items will be exported containing the internal minecraft name and the localized name to actually find the item you are using. This also contains the item representation of the blocks, but are missing items, which are too much to display e.g. FMP. [default: true]
     B:exportItemNames=true
 }
-
-
