--- a/config/InvTweaks.cfg
+++ b/config/InvTweaks.cfg
@@ -1,6 +1,6 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://legacy.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Mon Mar 26 04:12:36 CDT 2018
+#Tue Mar 27 03:13:35 IDT 2018
 enableMiddleClick=false
 showChestButtons=true
 enableSortingOnPickup=false
