--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@ icon.png
 OpenComputersMod-1.7.2.67-lua52-native.64.dll
 OpenComputersMod-1.7.2.67-lua53-native.64.dll
 realms_persistence.json
+config/worldedit/worldedit.properties
+config/splash.properties
+config/InvTweaks.cfg
+config/buildcraft/detailed.properties
