--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,4 @@ OpenComputersMod-1.7.2.67-lua52-native.64.dll
 OpenComputersMod-1.7.2.67-lua53-native.64.dll
 realms_persistence.json
 config/worldedit/worldedit.properties
-config/splash.properties
-config/InvTweaks.cfg
-config/buildcraft/detailed.properties
+config/betterbuilderswands.cfg
