Added a few new mods, set CoFH world to generate flat bedrock

--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -231,6 +231,19 @@ world569701859 {
 }
 
 
+world596373735 {
+    # Give items instead of showing the recipe.
+    B:cheatItemsEnabled=true
+
+    # Hide and unhide items by clicking them in the item list.
+    B:editEnabled=false
+    S:filterText=@platf
+
+    # Show the list of items next to open guis.
+    B:overlayEnabled=true
+}
+
+
 world607583638 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
