--- a/config/charset/modules.cfg
+++ b/config/charset/modules.cfg
@@ -13,13 +13,16 @@ categories {
 compat {
     B:"baubles:lib"=true
     B:"buildcraft:lib"=true
+    B:"chiselsandbits:storage.barrels"=true
     B:"commoncapabilities:lib.slotlessInsertion"=true
     B:"guideapi:tablet"=true
     B:"igw-mod:tablet"=true
     B:"jei:simplelogic.gates"=true
+    B:"jei:storage.barrels"=true
     B:"mcjtylib:tablet"=true
     B:"mcmultipart:simplelogic.gates"=true
     B:"opencomputers:lib"=true
+    B:"storage.barrels:tweak.carry"=true
 }
 
 
@@ -46,14 +49,26 @@ overrides {
     # Simple logic gates. [Profile: STABLE]
     S:simplelogic.gates=DEFAULT
 
+    # Simple barrels [Profile: FORCED]
+    S:storage.barrels=DEFAULT
+
     # The Tablet, providing documentation for Charset and other mods! [Profile: FORCED]
     S:tablet=DEFAULT
+
+    # Use dyes on Minecarts to make them colorful [Profile: FORCED]
+    S:transport.dyeableMinecarts=DEFAULT
+
+    # A small assortment of useful rails [Profile: FORCED]
+    S:transport.rails=DEFAULT
 
     # Allows dyeing item names in an anvil [Profile: FORCED]
     S:tweak.anvilDyeItems=DEFAULT
 
     # Options to restore classic bonemeal behaviour and whitelist bonemealable blocks. [Profile: FORCED]
     S:tweak.bonemeal=DEFAULT
+
+    # Allow players to carry blocks via shift-pickblock [Profile: FORCED]
+    S:tweak.carry=DEFAULT
 
     # Makes double doors open at the same time upon right-clicking just one [Profile: FORCED]
     S:tweak.doubledoors=DEFAULT
