Disabled some items, made 3D block particles less in your face

--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -208,6 +208,71 @@ crafting {
     B:net.darkhax.darkutils.features.material.BlockWitherDust=true
     B:net.darkhax.darkutils.features.shulkerpearl.BlockShulkerPearl=true
     B:net.insomniakitten.jetorches.block.BlockLamp=true
+    B:net.kipster.terra.objects.blocks.BlockAnkeriteOre=true
+    B:net.kipster.terra.objects.blocks.BlockAnthraciteBlock=true
+    B:net.kipster.terra.objects.blocks.BlockAnthraciteOre=true
+    B:net.kipster.terra.objects.blocks.BlockBandedOre=true
+    B:net.kipster.terra.objects.blocks.BlockBasalt=true
+    B:net.kipster.terra.objects.blocks.BlockBituminousBlock=true
+    B:net.kipster.terra.objects.blocks.BlockBituminousOre=true
+    B:net.kipster.terra.objects.blocks.BlockBlackDiorite=true
+    B:net.kipster.terra.objects.blocks.BlockBlueSchist=true
+    B:net.kipster.terra.objects.blocks.BlockChalk=true
+    B:net.kipster.terra.objects.blocks.BlockDanlveyiteOre=true
+    B:net.kipster.terra.objects.blocks.BlockGabbro=true
+    B:net.kipster.terra.objects.blocks.BlockGneiss=true
+    B:net.kipster.terra.objects.blocks.BlockGoethiteOre=true
+    B:net.kipster.terra.objects.blocks.BlockGreenSchist=true
+    B:net.kipster.terra.objects.blocks.BlockHematiteOre=true
+    B:net.kipster.terra.objects.blocks.BlockImperialQuartzite=true
+    B:net.kipster.terra.objects.blocks.BlockKamboradoiteOre=true
+    B:net.kipster.terra.objects.blocks.BlockKimberlite=true
+    B:net.kipster.terra.objects.blocks.BlockLigniteBlock=true
+    B:net.kipster.terra.objects.blocks.BlockLigniteOre=true
+    B:net.kipster.terra.objects.blocks.BlockLimestone=true
+    B:net.kipster.terra.objects.blocks.BlockLimoniteOre=true
+    B:net.kipster.terra.objects.blocks.BlockLogBlackSpruce=true
+    B:net.kipster.terra.objects.blocks.BlockLogBlueSpruce=true
+    B:net.kipster.terra.objects.blocks.BlockLogCherry=true
+    B:net.kipster.terra.objects.blocks.BlockLogRedSpruce=true
+    B:net.kipster.terra.objects.blocks.BlockLogWhiteSpruce=true
+    B:net.kipster.terra.objects.blocks.BlockMagachiteOre=true
+    B:net.kipster.terra.objects.blocks.BlockMagnetiteOre=true
+    B:net.kipster.terra.objects.blocks.BlockMarble=true
+    B:net.kipster.terra.objects.blocks.BlockMelisciteOre=true
+    B:net.kipster.terra.objects.blocks.BlockMigmatite=true
+    B:net.kipster.terra.objects.blocks.BlockNewNetherGemBlock=true
+    B:net.kipster.terra.objects.blocks.BlockNewNetherGemPillar=true
+    B:net.kipster.terra.objects.blocks.BlockNewNetherack=true
+    B:net.kipster.terra.objects.blocks.BlockNewNetherbrick=true
+    B:net.kipster.terra.objects.blocks.BlockNewRocks=true
+    B:net.kipster.terra.objects.blocks.BlockPeatBlock=true
+    B:net.kipster.terra.objects.blocks.BlockPeatOre=true
+    B:net.kipster.terra.objects.blocks.BlockPinkQuartzite=true
+    B:net.kipster.terra.objects.blocks.BlockPlanksBlackSpruce=true
+    B:net.kipster.terra.objects.blocks.BlockPlanksBlueSpruce=true
+    B:net.kipster.terra.objects.blocks.BlockPlanksCherry=true
+    B:net.kipster.terra.objects.blocks.BlockPlanksElm=true
+    B:net.kipster.terra.objects.blocks.BlockPlanksMahogany=true
+    B:net.kipster.terra.objects.blocks.BlockPlanksPalm=true
+    B:net.kipster.terra.objects.blocks.BlockPlanksRedSpruce=true
+    B:net.kipster.terra.objects.blocks.BlockPlanksWhiteSpruce=true
+    B:net.kipster.terra.objects.blocks.BlockPumice=true
+    B:net.kipster.terra.objects.blocks.BlockRedQuartzite=true
+    B:net.kipster.terra.objects.blocks.BlockRhyolite=true
+    B:net.kipster.terra.objects.blocks.BlockSand=true
+    B:net.kipster.terra.objects.blocks.BlockSandstone=true
+    B:net.kipster.terra.objects.blocks.BlockSandstoneCarved=true
+    B:net.kipster.terra.objects.blocks.BlockSandstoneFace=true
+    B:net.kipster.terra.objects.blocks.BlockSandstoneGlyph=true
+    B:net.kipster.terra.objects.blocks.BlockSandstoneSmooth=true
+    B:net.kipster.terra.objects.blocks.BlockScoria=true
+    B:net.kipster.terra.objects.blocks.BlockSideriteOre=true
+    B:net.kipster.terra.objects.blocks.BlockSlate=true
+    B:net.kipster.terra.objects.blocks.BlockSoapstone=true
+    B:net.kipster.terra.objects.blocks.BlockSolituditeOre=true
+    B:net.kipster.terra.objects.blocks.BlockTaconiteOre=true
+    B:net.kipster.terra.objects.blocks.BlockThenaliteOre=true
     B:net.minecraft.block.Block=true
     B:net.minecraft.block.BlockBone=true
     B:net.minecraft.block.BlockBookshelf=true
@@ -254,6 +319,18 @@ crafting {
     B:net.minecraft.block.BlockStone=true
     B:net.minecraft.block.BlockStoneBrick=true
     B:net.minecraft.block.BlockWorkbench=true
+    B:nex.block.BlockAmethyst=true
+    B:nex.block.BlockAmethystOre=true
+    B:nex.block.BlockBasalt=true
+    B:nex.block.BlockElderMushroomCap=true
+    B:nex.block.BlockElderMushroomStem=true
+    B:nex.block.BlockHyphae=true
+    B:nex.block.BlockNetherBrick=true
+    B:nex.block.BlockNetherrack=true
+    B:nex.block.BlockQuartzOre=true
+    B:nex.block.BlockRime=true
+    B:nex.block.BlockRimeOre=true
+    B:nex.block.BlockWornIron=true
     B:openblocks.common.block.BlockElevator=true
     B:openblocks.common.block.BlockSponge=true
     B:"org.cyclops.integrateddynamics.block.BlockCrystalizedChorusBlockConfig$1"=true
@@ -276,6 +353,7 @@ crafting {
     B:rustic.common.blocks.BlockLogRustic=true
     B:rustic.common.blocks.BlockPillar=true
     B:rustic.common.blocks.BlockPlanksRustic=true
+    B:shadows.fastbench.block.BlockFastBench=true
     B:shetiphian.terraqueous.common.block.BlockPlanks=true
     B:shetiphian.terraqueous.common.block.BlockTreeTrunk=true
     B:slimeknights.tconstruct.gadgets.block.BlockBrownstone=true
@@ -292,6 +370,8 @@ crafting {
     B:slimeknights.tconstruct.smeltery.block.BlockSeared=true
     B:slimeknights.tconstruct.world.block.BlockSlimeDirt=true
     B:slimeknights.tconstruct.world.block.BlockSlimeLeaves=true
+    B:sugiforest.block.BlockSugiLog=true
+    B:sugiforest.block.BlockSugiWood=true
     B:therealfarfetchd.rswires.common.block.Lamp=true
     B:therealfarfetchd.rswires.common.block.LampInv=true
     B:vazkii.botania.common.block.BlockDreamwood=true
@@ -347,6 +427,7 @@ crafting {
     B:vazkii.quark.world.block.BlockBiotiteOre=true
     B:vazkii.quark.world.block.BlockLimestone=true
     B:vazkii.quark.world.block.BlockMarble=true
+    B:vswe.stevescarts.blocks.BlockMetalStorage=true
     B:zmaster587.advancedRocketry.block.BlockCharcoalLog=true
     B:zmaster587.advancedRocketry.block.BlockIntake=true
     B:zmaster587.advancedRocketry.block.BlockLinkedHorizontalTexture=true
