--- a/config/integrateddynamicscompat.cfg
+++ b/config/integrateddynamicscompat.cfg
@@ -34,6 +34,9 @@ core {
 
     # Crystalized Menril crafting in the Casting Basin.
     B:tconstruct=true
+
+    # TOP tooltips for parts.
+    B:theoneprobe=true
 }
 
 
