--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -66,6 +66,14 @@ world-1793304504 {
 }
 
 
+world-1915990317 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=lumium
+    B:overlayEnabled=true
+}
+
+
 world-1966076330 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
@@ -237,7 +245,7 @@ world596373735 {
 
     # Hide and unhide items by clicking them in the item list.
     B:editEnabled=false
-    S:filterText=@platf
+    S:filterText=@randomt
 
     # Show the list of items next to open guis.
     B:overlayEnabled=true
