--- a/config/randomthings.cfg
+++ b/config/randomthings.cfg
@@ -71,7 +71,7 @@ worldgen {
     B:MagicHood=true
     B:Nature-Core=true
     B:PeaceCandle=true
-    B:PitcherPlants=true
+    B:PitcherPlants=false
     B:Sakanade=true
     B:SlimeCube=true
     B:SummoningPendulum=true
