--- a/config/watercontrolextreme.cfg
+++ b/config/watercontrolextreme.cfg
@@ -11,6 +11,7 @@ general {
         minecraft:ocean
         minecraft:beach
         minecraft:river
+        minecraft:swamp
      >
 
     # Dimensions in which these fluids should be infinite
