Disabled Terraqueous flowers

--- a/config/terraqueous.cfg
+++ b/config/terraqueous.cfg
@@ -40,7 +40,7 @@ general {
 
         # Adds: 16 new flowers that can spread and grow (see TWEAKS.enableFlowerSpread)
         # IDs: flowers_cluster, flowers_single
-        B:addFlowers=true
+        B:addFlowers=false
 
         # Adds: Hay blocks, thresh, loose hay
         # IDs: hay
