Added Builders Guides

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -402,6 +402,17 @@ binniecore {
 }
 
 
+blockcraftery {
+    B:editableblock=false
+    B:editableinnercorner=false
+    B:editableoutercorner=false
+    B:editableslab=false
+    B:editableslant=false
+    B:editablestairs=false
+    B:editablewall=false
+}
+
+
 botania {
     B:alchemycatalyst=true
     B:alfheimportal=false
@@ -1134,6 +1145,12 @@ ceramics {
     B:rainbowclay.5=true
     B:rainbowclay.6=true
     B:rainbowclay.7=true
+}
+
+
+charset {
+    B:compressioncrafter=false
+    B:railcharset=false
 }
 
 
@@ -7039,6 +7056,12 @@ jetorches {
 }
 
 
+minecoprocessors {
+    B:minecoprocessor=false
+    B:minecoprocessor.4=false
+}
+
+
 minecraft {
     B:acaciafence=false
     B:acaciafencegate=false
@@ -7689,6 +7712,113 @@ natura {
 }
 
 
+nex {
+    B:blockamethyst=true
+    B:blockbasalt=true
+    B:blockbasalt.1=true
+    B:blockbasalt.2=true
+    B:blockbasalt.3=true
+    B:blockbonechunk=false
+    B:blockbonesliver=false
+    B:blockbricknether=true
+    B:blockbricknether.1=true
+    B:blockbricknether.2=true
+    B:blockbricknether.3=true
+    B:blockglasspanesoul=false
+    B:blockglasssoul=false
+    B:blockhyphae=true
+    B:blockicefrostburn=false
+    B:blockironworn=true
+    B:blocknetherrack=true
+    B:blocknetherrack.1=true
+    B:blocknetherrack.2=true
+    B:blocknetherrack.3=true
+    B:blocknetherrackpath=false
+    B:blocknetherrackpath.1=false
+    B:blocknetherrackpath.2=false
+    B:blocknetherrackpath.3=false
+    B:blocknetherrackpath.4=false
+    B:blockrime=true
+    B:blocksandsoultilled=false
+    B:fencebasalt=false
+    B:fencebasalt.1=false
+    B:fencebasalt.2=false
+    B:fencebasalt.3=false
+    B:fencebricknether=false
+    B:fencebricknether.1=false
+    B:fencebricknether.2=false
+    B:fencebricknether.3=false
+    B:fencegatebasaltbrick=false
+    B:fencegatebasaltnormal=false
+    B:fencegatebasaltpillar=false
+    B:fencegatebasaltsmooth=false
+    B:fencegatebricknether=false
+    B:fencegatebricknetherfiery=false
+    B:fencegatebricknethergloomy=false
+    B:fencegatebricknethericy=false
+    B:fencegatebricknetherlively=false
+    B:fencegatebricknetherred=false
+    B:fencegatequartz=false
+    B:fencevanilla=false
+    B:fencevanilla.1=false
+    B:fluidichor=false
+    B:oreamethyst=true
+    B:orequartz=true
+    B:orequartz.1=true
+    B:orequartz.2=true
+    B:orequartz.3=true
+    B:orerime=true
+    B:plantmushroomelder=false
+    B:plantmushroomelder.1=false
+    B:plantmushroomeldercap=true
+    B:plantmushroomeldercap.1=true
+    B:plantmushroomelderstem=true
+    B:plantmushroomenokicap=false
+    B:plantmushroomenokistem=false
+    B:plantthornstalk=false
+    B:slabbasalt=false
+    B:slabbasalt.1=false
+    B:slabbasalt.2=false
+    B:slabbasalt.3=false
+    B:slabbasaltdouble=true
+    B:slabbasaltdouble.1=true
+    B:slabbasaltdouble.2=true
+    B:slabbasaltdouble.3=true
+    B:slabbricknether=false
+    B:slabbricknether.1=false
+    B:slabbricknether.2=false
+    B:slabbricknether.3=false
+    B:slabbricknetherdouble=true
+    B:slabbricknetherdouble.1=true
+    B:slabbricknetherdouble.2=true
+    B:slabbricknetherdouble.3=true
+    B:slabvanilla=false
+    B:slabvanilladouble=true
+    B:stairsbasaltbrick=false
+    B:stairsbasaltnormal=false
+    B:stairsbasaltpillar=false
+    B:stairsbasaltsmooth=false
+    B:stairsbricknetherfiery=false
+    B:stairsbricknethergloomy=false
+    B:stairsbricknethericy=false
+    B:stairsbricknetherlively=false
+    B:stairsbricknetherred=false
+    B:tileurnsorrow=false
+    B:tileurnsorrow.1=false
+    B:wallbasalt=false
+    B:wallbasalt.1=false
+    B:wallbasalt.2=false
+    B:wallbasalt.3=false
+    B:wallbricknether=false
+    B:wallbricknether.1=false
+    B:wallbricknether.2=false
+    B:wallbricknether.3=false
+    B:wallvanilla=false
+    B:wallvanilla.1=false
+    B:wallvanilla.2=false
+}
+
+
 nuclearcraft {
     B:acceleratorelectromagnetactive=false
     B:acceleratorelectromagnetidle=false
@@ -8181,6 +8311,11 @@ oreberries {
     B:ironoreberrybush=false
     B:silveroreberrybush=false
     B:tinoreberrybush=false
+}
+
+
+platforms {
+    B:platform=false
 }
 
 
@@ -12640,6 +12775,24 @@ simplevoidworld {
 }
 
 
+stevescarts {
+    B:blockactivator=false
+    B:blockadvdetector=false
+    B:blockcargomanager=false
+    B:blockcartassembler=false
+    B:blockdetector=false
+    B:blockdetector.1=false
+    B:blockdetector.2=false
+    B:blockdetector.3=false
+    B:blockdetector.4=false
+    B:blockdistributor=false
+    B:blockjunction=false
+    B:blockliquidmanager=false
+    B:blockmetalstorage=true
+    B:upgrade=false
+}
+
+
 storagedrawers {
     B:compdrawers=false
     B:controller=false
@@ -12661,6 +12814,20 @@ storagedrawers {
     B:trim.3=true
     B:trim.4=true
     B:trim.5=true
+}
+
+
+sugiforest {
+    B:sugichest=false
+    B:sugifallenleaves=false
+    B:sugifence=false
+    B:sugifencegate=false
+    B:sugileaves=false
+    B:sugilog=true
+    B:sugiplanks=true
+    B:sugisapling=false
+    B:sugislab=false
+    B:sugistairs=false
 }
 
 
@@ -12856,6 +13023,209 @@ tconstruct {
     B:tooltables.5=false
     B:woodrail=false
     B:woodrailtrapdoor=false
+}
+
+
+terra {
+    B:alikite=true
+    B:alikitebricks=true
+    B:basaltcobblestone=true
+    B:basaltpolished=true
+    B:basaltstone=true
+    B:basaltstonebrick=true
+    B:blackdioritecobblestone=true
+    B:blackdioritepolished=true
+    B:blackdioritestone=true
+    B:blackdioritestonebrick=true
+    B:blacksand=true
+    B:blacksandstone=true
+    B:blacksandstonecarved=true
+    B:blacksandstoneface=true
+    B:blacksandstoneglyph=true
+    B:blacksandstonesmooth=true
+    B:blackspruceleaves=false
+    B:blacksprucelog=true
+    B:blackspruceplanks=true
+    B:blacksprucesapling=false
+    B:blueschistcobblestone=true
+    B:blueschistpolished=true
+    B:blueschiststone=true
+    B:blueschiststonebrick=true
+    B:bluespruceleaves=false
+    B:bluesprucelog=true
+    B:bluespruceplanks=true
+    B:bluesprucesapling=false
+    B:chalkcobblestone=true
+    B:chalkpolished=true
+    B:chalkstone=true
+    B:chalkstonebrick=true
+    B:cherryleavespurple=false
+    B:cherryleaveswhite=false
+    B:cherrylog=true
+    B:cherryplanks=true
+    B:cherrysaplingpurple=false
+    B:cherrysaplingwhite=false
+    B:continentalsand=true
+    B:continentalsandstone=true
+    B:continentalsandstonecarved=true
+    B:continentalsandstoneface=true
+    B:continentalsandstoneglyph=true
+    B:continentalsandstonesmooth=true
+    B:danlveyite=true
+    B:danlveyiteblock=true
+    B:danlveyitepillar=true
+    B:elmleaves=false
+    B:elmlog=true
+    B:elmplanks=true
+    B:elmsapling=false
+    B:gabbrocobblestone=true
+    B:gabbropolished=true
+    B:gabbrostone=true
+    B:gabbrostonebrick=true
+    B:gneisscobblestone=true
+    B:gneisspolished=true
+    B:gneissstone=true
+    B:gneissstonebrick=true
+    B:greenschistcobblestone=true
+    B:greenschistpolished=true
+    B:greenschiststone=true
+    B:greenschiststonebrick=true
+    B:greydeadbush=false
+    B:imperialquartzitecobblestone=true
+    B:imperialquartzitepolished=true
+    B:imperialquartzitestone=true
+    B:imperialquartzitestonebrick=true
+    B:ironsand=true
+    B:ironsandstone=true
+    B:ironsandstonecarved=true
+    B:ironsandstoneface=true
+    B:ironsandstoneglyph=true
+    B:ironsandstonesmooth=true
+    B:kamboradoite=true
+    B:kamboradoiteblock=true
+    B:kamboradoitepillar=true
+    B:kimberlitecobblestone=true
+    B:kimberlitepolished=true
+    B:kimberlitestone=true
+    B:kimberlitestonebrick=true
+    B:krundaltite=true
+    B:krundaltitebricks=true
+    B:limestonecobblestone=true
+    B:limestonepolished=true
+    B:limestonestone=true
+    B:limestonestonebrick=true
+    B:magachite=true
+    B:magachiteblock=true
+    B:magachitepillar=true
+    B:mahoganyleaves=false
+    B:mahoganylog=true
+    B:mahoganyplanks=true
+    B:mahoganysapling=false
+    B:marblecobblestone=true
+    B:marblepolished=true
+    B:marblestone=true
+    B:marblestonebrick=true
+    B:meliscite=true
+    B:melisciteblock=true
+    B:meliscitepillar=true
+    B:migmatitecobblestone=true
+    B:migmatitepolished=true
+    B:migmatitestone=true
+    B:migmatitestonebrick=true
+    B:olivinesand=true
+    B:olivinesandstone=true
+    B:olivinesandstonecarved=true
+    B:olivinesandstoneface=true
+    B:olivinesandstoneglyph=true
+    B:olivinesandstonesmooth=true
+    B:orangesand=true
+    B:orangesandstone=true
+    B:orangesandstonecarved=true
+    B:orangesandstoneface=true
+    B:orangesandstoneglyph=true
+    B:orangesandstonesmooth=true
+    B:oreoverworldcanthracite=true
+    B:oreoverworldcbanthracite=true
+    B:oreoverworldcbbituminous=true
+    B:oreoverworldcbituminous=true
+    B:oreoverworldcblignite=true
+    B:oreoverworldcbpeat=true
+    B:oreoverworldclignite=true
+    B:oreoverworldcpeat=true
+    B:oreoverworldiankerite=true
+    B:oreoverworldibanded=true
+    B:oreoverworldigoethite=true
+    B:oreoverworldihematite=true
+    B:oreoverworldilimonite=true
+    B:oreoverworldimagnetite=true
+    B:oreoverworldisiderite=true
+    B:oreoverworlditaconite=true
+    B:palmleaves=false
+    B:palmlog=true
+    B:palmplanks=true
+    B:palmsapling=false
+    B:pinkquartzitecobblestone=true
+    B:pinkquartzitepolished=true
+    B:pinkquartzitestone=true
+    B:pinkquartzitestonebrick=true
+    B:pinksand=true
+    B:pinksandstone=true
+    B:pinksandstonecarved=true
+    B:pinksandstoneface=true
+    B:pinksandstoneglyph=true
+    B:pinksandstonesmooth=true
+    B:pumicecobblestone=true
+    B:pumicepolished=true
+    B:pumicestone=true
+    B:pumicestonebrick=true
+    B:purplesand=true
+    B:purplesandstone=true
+    B:purplesandstonecarved=true
+    B:purplesandstoneface=true
+    B:purplesandstoneglyph=true
+    B:purplesandstonesmooth=true
+    B:redquartzitecobblestone=true
+    B:redquartzitepolished=true
+    B:redquartzitestone=true
+    B:redquartzitestonebrick=true
+    B:redspruceleaves=false
+    B:redsprucelog=true
+    B:redspruceplanks=true
+    B:redsprucesapling=false
+    B:rhyolitecobblestone=true
+    B:rhyolitepolished=true
+    B:rhyolitestone=true
+    B:rhyolitestonebrick=true
+    B:scoriacobblestone=true
+    B:scoriapolished=true
+    B:scoriastone=true
+    B:scoriastonebrick=true
+    B:slatecobblestone=true
+    B:slatepolished=true
+    B:slatestone=true
+    B:slatestonebrick=true
+    B:soapstonecobblestone=true
+    B:soapstonepolished=true
+    B:soapstonestone=true
+    B:soapstonestonebrick=true
+    B:solitudite=true
+    B:solituditeblock=true
+    B:solituditepillar=true
+    B:thenalite=true
+    B:thenaliteblock=true
+    B:thenalitepillar=true
+    B:triglicite=true
+    B:triglicitebricks=true
+    B:whitesand=true
+    B:whitesandstone=true
+    B:whitesandstonecarved=true
+    B:whitesandstoneface=true
+    B:whitesandstoneglyph=true
+    B:whitesandstonesmooth=true
+    B:whitespruceleaves=false
+    B:whitesprucelog=true
+    B:whitespruceplanks=true
+    B:whitesprucesapling=false
 }
 
 
