--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -245,7 +245,7 @@ world596373735 {
 
     # Hide and unhide items by clicking them in the item list.
     B:editEnabled=false
-    S:filterText=@randomt
+    S:filterText=
 
     # Show the list of items next to open guis.
     B:overlayEnabled=true
