Disabled OpenBlocks elevator

--- a/config/openblocks.cfg
+++ b/config/openblocks.cfg
@@ -24,7 +24,7 @@ blocks {
     B:canvas_glass=true
     B:donation_station=true
     B:drawing_table=true
-    B:elevator=true
+    B:elevator=false
     B:elevator_rotating=true
     B:fan=true
     B:flag=true
