Disabled glass shards from Terraqueous and Quark

--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -823,7 +823,7 @@ tweaks {
     B:"Dragon's Breath doesn't leave a bottle behind"=true
     B:"Dye any wool"=true
     B:"Endermen anti cheese"=false
-    B:"Glass shards"=true
+    B:"Glass shards"=false
     B:"Hoes break a 5x5 of plants"=true
     B:"Improved sleeping"=true
     B:"Jump boost allows to step up 1 block"=true
