Added Factory Tech and Magneticraft
Configs are default generated

--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -110,6 +110,7 @@ crafting {
     B:cofh.thermalfoundation.block.BlockStorage=true
     B:cofh.thermalfoundation.block.BlockStorageAlloy=true
     B:cofh.thermalfoundation.block.BlockStorageResource=true
+    B:com.cout970.magneticraft.block.core.BlockBase=true
     B:com.digitalfeonix.hydrogel.block.BlockHydroGel=true
     B:com.globbypotato.rockhounding_rocks.blocks.decos.RocksA=true
     B:com.globbypotato.rockhounding_rocks.blocks.decos.RocksB=true
@@ -131,6 +132,9 @@ crafting {
     B:com.globbypotato.rockhounding_surface.blocks.white_sands.GypsumPillars=true
     B:com.globbypotato.rockhounding_surface.blocks.white_sands.WhiteSand=true
     B:com.jaquadro.minecraft.storagedrawers.block.BlockTrim=true
+    B:com.lothrazar.cyclicmagic.block.BlockSoundSuppress=true
+    B:com.lothrazar.cyclicmagic.component.library.BlockLibraryController=true
+    B:com.lothrazar.cyclicmagic.component.ore.BlockDimensionOre=true
     B:com.oitsjustjose.geolosys.blocks.BlockOre=true
     B:com.oitsjustjose.geolosys.blocks.BlockOreVanilla=true
     B:com.progwml6.natura.decorative.block.bookshelves.BlockNetherBookshelves=true
