--- a/config/factorytech.cfg
+++ b/config/factorytech.cfg
@@ -32,7 +32,7 @@ general {
     B:genCopper=true
 
     # Set to false to disable nickel ore generation [default: true]
-    B:genNickel=true
+    B:genNickel=false
 
     # Maximum distance in blocks that decorative coils can connect to each other [range: 1 ~ 2147483647, default: 12]
     I:maxDecoCoilRange=12
