Disabled Factory Tech copper gen
(for real this time)

--- a/config/factorytech.cfg
+++ b/config/factorytech.cfg
@@ -29,7 +29,7 @@ general {
     S:fluidDrillMultiplier=1.0
 
     # Set to false to disable copper ore generation [default: true]
-    B:genCopper=true
+    B:genCopper=false
 
     # Set to false to disable nickel ore generation [default: true]
     B:genNickel=false
