Fixed Terra recipes

--- a/config/worldedit/worldedit.properties
+++ b/config/worldedit/worldedit.properties
@@ -1,5 +1,5 @@
 #Don't put comments; they get removed
-#Tue Mar 27 04:00:18 IDT 2018
+#Tue Apr 03 18:25:28 CDT 2018
 default-max-polygon-points=-1
 schematic-save-dir=schematics
 super-pickaxe-many-drop-items=true
