Fixed void world structure gen

--- a/config/terraqueous.cfg
+++ b/config/terraqueous.cfg
@@ -924,19 +924,19 @@ general {
 
         dim_blacklist {
             S:clouds <
-                43
+                simplevoidworld
              >
             S:doodads <
-                43
+                simplevoidworld
              >
             S:flowers <
-                43
+                simplevoidworld
              >
             S:plants <
-                43
+                simplevoidworld
              >
             S:trees <
-                43
+                simplevoidworld
              >
         }
 
