Increesed bonemeal cost of sprinkler

--- a/config/openblocks.cfg
+++ b/config/openblocks.cfg
@@ -130,7 +130,7 @@ devnull {
 
 
 dropblock {
-    # Should elevator move player to center of block after teleporting	
+    # Should elevator move player to center of block after teleporting
     B:centerOnBlock=false
 
     # XP consumed by elevator (total amount = ratio * distance)
@@ -398,7 +398,7 @@ sponge {
 
 sprinkler {
     # Consume rate of bonemeal (ticks/item).
-    I:bonemealConsumeRate=600
+    I:bonemealConsumeRate=1000
 
     # 1/chance that crops will be fertilized with bonemeal
     I:bonemealFertilizeChance=200
@@ -484,5 +484,3 @@ xpbucket {
     # Should liquid XP be registered for universal bucket support (does not enable universal bucket)
     B:universalBucketSupport=true
 }
-
-
