Disabled beryllium dust from dropping from coal ore
You can get beryllium from crushing emeralds #183

--- a/config/nuclearcraft.cfg
+++ b/config/nuclearcraft.cfg
@@ -671,7 +671,7 @@ ores {
     # Will vanilla ores drop extra resources? Order: rhodochrosite, beryllium dust, zirconium dust, fluorite, sulfur.
     B:ore_drops <
         true
-        true
+        false
         true
         true
         true
@@ -838,5 +838,3 @@ tools {
         20
      >
 }
-
-
