--- a/config/nuclearcraft.cfg
+++ b/config/nuclearcraft.cfg
@@ -670,7 +670,7 @@ ores {
 
     # Will vanilla ores drop extra resources? Order: rhodochrosite, beryllium dust, zirconium dust, fluorite, sulfur.
     B:ore_drops <
-        true
+        false
         false
         true
         true
