Updated a bunch of mods

--- a/config/immersiverailroading.cfg
+++ b/config/immersiverailroading.cfg
@@ -9,6 +9,9 @@ general {
         # Clear blocsk in creative mode when placing tracks
         B:creativePlacementClearsBlocks=true
 
+        # Drop snowballs when the train can't push a block out of the way
+        B:dropSnowBalls=false
+
         # Break blocks around the border of the tracks in creative
         B:enableSideBlockClearing=true
 
@@ -17,6 +20,9 @@ general {
 
         # Enable Boiler Explosions
         B:explosionsEnabled=true
+
+        # Requires solid blocks to be placed under the rails
+        B:requireSolidBlocks=true
     }
 
     balance {
@@ -41,6 +47,9 @@ general {
         # How heavy is a single block in Kg
         I:blockWeight=100
 
+        # Brake Multiplier: Higher numbers increase slowdown, lower numbers decrease slowdown
+        D:brakeMultiplier=1.0
+
         # Diesel Fuel Efficiency
         I:locoDieselFuelEfficiency=100
 
@@ -53,11 +62,22 @@ general {
         # How much water the locomotive should use
         D:locoWaterUsage=10.0
 
+        # Slope Multiplier: Higher numbers increase slowdown, lower numbers decrease slowdown
+        D:slopeMultiplier=1.0
+
         # If more than X% of the tracks are above non solid blocks, break the track
         D:trackFloatingPercent=0.05
 
+        # Traction Multiplier: Higher numbers decreases wheel slip, lower numders increase wheel slip
+        D:tractionMultiplier=1.0
+
         # Distance the villagers will hear the conductor's whistle
         D:villagerConductorDistance=50.0
+
+        # Villager payout items
+        S:villagerPayoutItems <
+            minecraft:emerald
+         >
 
         # How much you get payed per meter the villager traveled (default 1 emerald per km)
         D:villagerPayoutPerMeter=0.001
@@ -78,6 +98,12 @@ general {
 
         # Keep rolling stock loaded even when it is not moving
         B:keepStockLoaded=false
+
+        # Time between open computers poll ticks for augments
+        I:ocPollDelayTicks=1
+
+        # How fast deep snow should melt, 0 = disabled, 20 = fast, 400 = slow
+        I:snowMeltRate=0
     }
 
 }
