--- a/config/lostcities/profile_wasteland.cfg
+++ b/config/lostcities/profile_wasteland.cfg
@@ -7,17 +7,6 @@
 ##########################################################################################################
 
 cities_wasteland {
-    S:allowedBiomeFactors <
-        desert=1
-        desert_hills=1
-        stone_beach=1
-        dead_forest=1
-        gravel_beach=1
-        outback=1
-        volcanic_island=1
-        wasteland=.3
-     >
-
     # The default biome factor which is used if your biome is not specified in 'cityBiomeFactors' [range: 0.0 ~ 1.0, default: 1.0]
     S:cityBiomeFactorDefault=1.0
 
@@ -53,7 +42,6 @@ cities_wasteland {
 
     # The center and radius of a city define a sphere. This thresshold indicates from which point a city is considered a city. This is important for calculating where cities are based on overlapping city circles (where the city thressholds are added) [range: 0.0 ~ 1.0, default: 0.2]
     S:cityThresshold=0.2
-    S:generatorOptions=
 }
 
 
@@ -290,7 +278,7 @@ lostcity_wasteland {
     S:dataCenterChance=0.1
 
     # The description of this profile [default: Wasteland, no water, bare land]
-    S:description=Wasteland, no water, bare land (can use BOP biomes)
+    S:description=Wasteland, no water, bare land
 
     # Additional information [default: This profile works best with Biomes O Plenty]
     S:extraDescription=This profile works best with Biomes O Plenty
@@ -300,7 +288,6 @@ lostcity_wasteland {
 
     # If true then there will be minimal lighting in the buildings [default: false]
     B:generateLighting=false
-    B:generateLigthing=false
 
     # If true the chests in the buildings will contain loot [default: true]
     B:generateLoot=true
@@ -403,7 +390,7 @@ lostcity_wasteland {
     S:vineChance=0.003
 
     # How much lower the water level is compared to the ground level (63) [range: -100 ~ 100, default: 70]
-    I:waterLevelOffset=8
+    I:waterLevelOffset=70
 
     # The worldstyle used by this profile (defined in the assets) [default: standard]
     S:worldStyle=standard
