--- a/config/magneticraft.cfg
+++ b/config/magneticraft.cfg
@@ -145,8 +145,14 @@ general {
         # Battery Block Item charge and discharge speed in Joules/tick (Watts)
         I:blockBatteryTransferRate=500
 
+        # Combustion chamber max speed in Fuel per tick
+        D:combustionChamberMaxSpeed=4.0
+
         # Electric Furnace Max Consumption
         D:electricFurnaceMaxConsumption=20.0
+
+        # Electric Heater Max Heat produces per tick 1 Heat/t = 2W = 2FE 
+        D:electricHeaterMaxHeatPerTick=20.0
 
         # Grinder Max Consumption
         D:grinderMaxConsumption=40.0
