--- a/config/plustic.cfg
+++ b/config/plustic.cfg
@@ -10,6 +10,9 @@ materials {
     # Set to false to prevent Alumite from being loaded [default: true]
     B:"Enable material alumite"=true
 
+    # Set to false to prevent Bloodwood from being loaded [default: true]
+    B:"Enable material bloodwood_plustic"=true
+
     # Set to false to prevent Certus Quartz from being loaded [default: true]
     B:"Enable material certusquartz_plustic"=true
 
@@ -102,8 +105,6 @@ modules {
 
     # Integrate with Draconic Evolution [default: true]
     B:"Enable Draconic Evolution integration"=true
-
-    # Integrate with EnderIO [default: true]
     B:"Enable EnderIO integration"=true
 
     # Integrate with Environmental Tech [default: true]
@@ -177,8 +178,6 @@ tools {
 tweaks {
     # Add smelting recipes for Redstone, Glowstone, and Ender pearl (only if Thermal Foundation is loaded) [default: true]
     B:"Add smeltery recipes for Redstone, Glowstone, and Ender pearl"=true
-
-    # Allow Dark Steel alloying in the TiC smeltery [default: true]
     B:"Alloy Dark Steel in smeltery"=true
 
     # If Natural Pledge is loaded:
