--- a/config/rockhounding_surface.cfg
+++ b/config/rockhounding_surface.cfg
@@ -76,7 +76,7 @@ fossilwood {
     # Enable the spawn of the specific fossil wood
     B:ENABLE_TEREDO=true
 
-    # Frequency of the fossil wood spawning
+    # Frequency of the fossil wood generation
     I:WOOD_FREQUENCY=20
 
     # Wheter the wood parts will be oredicted for common uses
@@ -94,16 +94,14 @@ fossilwood {
 ##########################################################################################################
 
 gypsum {
-    # ID of the White Sands biome
+    # Enable the gypsum blocks
+    B:ALLOW_GYPSUM_DECO=true
+
+    # Enable the White Sands Biome and its features (biome, food) before creating a world
+    B:ENABLE_BIOME=true
     I:WHITE_SANDS_ID=110
 }
 
-
-##########################################################################################################
-# integration
-#--------------------------------------------------------------------------------------------------------#
-# Mod support and integration parameters.
-##########################################################################################################
 
 integration {
 }
@@ -122,7 +120,7 @@ tools {
     # Ticks required to process in the Wood Incubator
     I:SPEED_INCUBATOR=400
 
-    # Capacity for machine fluid tanks. This value is increased by 1000 by default
+    # Capacity for machine fluid tanks
     I:TANK_CAPACITY=9000
 }
 
@@ -134,7 +132,7 @@ tools {
 ##########################################################################################################
 
 truffles {
-    # Enable the truffle discovery
+    # Enable the truffles finding and its features (food, auction)
     B:ENABLE_TRUFFLES=false
 
     # Allow pigs to grief the block where truffles are discovered
