--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -103,6 +103,7 @@ crafting {
     B:"binnie.extratrees.blocks.wood.BlockETPlank$1"=true
     B:"blusunrize.immersiveengineering.common.IEContent$1"=true
     B:blusunrize.immersiveengineering.common.blocks.BlockIEBase=true
+    B:blusunrize.immersiveengineering.common.blocks.metal.BlockMetalDecoration0=true
     B:buildcraft.core.block.BlockDecoration=true
     B:cofh.thermalfoundation.block.BlockOre=true
     B:cofh.thermalfoundation.block.BlockOreFluid=true
@@ -154,6 +155,7 @@ crafting {
     B:com.themastergeneral.moglowstone.blocks.GSBlock=true
     B:com.themastergeneral.moglowstone.blocks.GSOre=true
     B:de.sanandrew.mods.immersivecables.block.BlockCoil=true
+    B:ferro2000.immersivetech.common.blocks.stone.BlockStoneDecoration=true
     B:fi.dy.masa.autoverse.block.BlockSensor=true
     B:flaxbeard.immersivepetroleum.common.blocks.BlockIPBase=true
     B:"forestry.apiculture.blocks.BlockHoneyComb$1"=true
