Rare cities spawn rarely in overworld

--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -66,6 +66,14 @@ world-1793304504 {
 }
 
 
+world-1881665232 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=cloud
+    B:overlayEnabled=true
+}
+
+
 world-1915990317 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
@@ -90,10 +98,39 @@ world-2005756463 {
 }
 
 
+world-2053499076 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=tile.
+    B:overlayEnabled=true
+}
+
+
 world-2055201011 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=glass
+    B:overlayEnabled=true
+}
+
+
+world-2068116865 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world-2117386381 {
+    # Give items instead of showing the recipe.
+    B:cheatItemsEnabled=true
+
+    # Hide and unhide items by clicking them in the item list.
+    B:editEnabled=false
+    S:filterText=stic
+
+    # Show the list of items next to open guis.
     B:overlayEnabled=true
 }
 
@@ -170,6 +207,22 @@ world-882939239 {
 }
 
 
+world-884592880 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world112479472 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
 world1337475327 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
@@ -240,14 +293,9 @@ world569701859 {
 
 
 world596373735 {
-    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
-
-    # Hide and unhide items by clicking them in the item list.
     B:editEnabled=false
     S:filterText=
-
-    # Show the list of items next to open guis.
     B:overlayEnabled=true
 }
 
@@ -264,6 +312,14 @@ world822915583 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=@thermalf
+    B:overlayEnabled=true
+}
+
+
+world864825278 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=clay
     B:overlayEnabled=true
 }
 
