--- a/config/lostcities/general.cfg
+++ b/config/lostcities/general.cfg
@@ -65,6 +65,7 @@ general {
         chisel
         atlantis
         realistic
+        extrararecities
      >
 
     # Block to put underneath a bed so that it qualifies as a teleporter bed [default: minecraft:diamond_block]
