Disabled nuclearcraft ore_drops
close #183
see #184 for alternative ways of getting those resources

--- a/config/nuclearcraft.cfg
+++ b/config/nuclearcraft.cfg
@@ -672,9 +672,9 @@ ores {
     B:ore_drops <
         false
         false
-        true
-        true
-        true
+        false
+        false
+        false
      >
 
     # Remove disabled ores from the Ore Dictionary and JEI?
