Disabled the abilitiy for nuclearcraft's machines to process ores

--- a/config/nuclearcraft.cfg
+++ b/config/nuclearcraft.cfg
@@ -803,7 +803,7 @@ processors {
     I:cobble_gen_power=0
 
     # Can NuclearCraft machines process ores?
-    B:ore_processing=true
+    B:ore_processing=false
 
     # Will a machine's valid inputs depend on the stacks already in its input slots as well as its possible recipes?
     B:smart_processor_input=true
