Added TOP and IntLog books to Ashestic Tome

--- a/config/akashictome.cfg
+++ b/config/akashictome.cfg
@@ -15,6 +15,8 @@ general {
         roots:runedTablet
         opencomputers:tool:4
         immersiveengineering:tool:3
+	integrateddynamics:on_the_dynamics_of_integration
+	theoneprobe:probenote
      >
     S:"Whitelisted Names" <
         book
