Disabled Quark clay generation

--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -1044,7 +1044,7 @@ world {
     B:"Crystal caves"=true
     B:"Default world options"=true
     B:"Depth mobs"=true
-    B:"Generate clay underground like dirt"=true
+    B:"Generate clay underground like dirt"=false
     B:"Guardians spawn in oceans"=true
     B:"Nether smoker"=true
     B:"Pathfinder maps"=true
