Apatite ore no longer spawns

--- a/config/terraqueous.cfg
+++ b/config/terraqueous.cfg
@@ -182,11 +182,12 @@ general {
                     thermalfoundation:material@0#1
                     thermalfoundation:material@0#2
                     thermalfoundation:material@0#3
-                    thermalfoundation:material@1#1
                     thermalfoundation:material@64#1
                     thermalfoundation:material@64#2
                     thermalfoundation:material@65#1
                     thermalfoundation:material@68#1
+                    terraqueous:item_main@215#2
+                    terraqueous:item_main@215#4
                     terraqueous:item_main@215#2
                     terraqueous:item_main@215#4
                  >
@@ -209,7 +210,7 @@ general {
 
                 # The number of items to drop on a suscessful attempt
                 # positive numbers are exact, negitive are a random chance between 0 and the number
-                I:dropCount=-5
+                I:dropCount=1
 
                 # Items listed here have a chance to drop
                 # Formats: Dictionary Item: 'ore:<dictionary name>#<count>', Mod Item: '<modId>:<itemId>@<meta>#<count>'
@@ -244,11 +245,12 @@ general {
                     thermalfoundation:material@0#1
                     thermalfoundation:material@0#2
                     thermalfoundation:material@0#3
-                    thermalfoundation:material@1#1
                     thermalfoundation:material@64#1
                     thermalfoundation:material@64#2
                     thermalfoundation:material@65#1
                     thermalfoundation:material@68#1
+                    terraqueous:item_main@214#2
+                    terraqueous:item_main@214#4
                     terraqueous:item_main@214#2
                     terraqueous:item_main@214#4
                  >
@@ -279,11 +281,12 @@ general {
                     thermalfoundation:material@0#1
                     thermalfoundation:material@0#2
                     thermalfoundation:material@0#3
-                    thermalfoundation:material@1#1
                     thermalfoundation:material@64#1
                     thermalfoundation:material@64#2
                     thermalfoundation:material@65#1
                     thermalfoundation:material@68#1
+                    terraqueous:item_main@216#2
+                    terraqueous:item_main@216#4
                     terraqueous:item_main@216#2
                     terraqueous:item_main@216#4
                  >
